--- a/dapi/test/fixtures/movies.yml
+++ b/dapi/test/fixtures/movies.yml
@@ -147,6 +147,7 @@ incons_question_mp4:
   src: /video/plus1/plus1.mp4
   duration: 47
 
+# 案件テスト用データ
 # レッグマジック
 legmagicX_m3u8:
   uuid: LegMagicXM3U8MovieID
